--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Comparison</title>
+    <title>Welcome</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            padding: 50px;
+            padding: 20px;
+            background-color: #f5f5f5;
         }
         .container {
             max-width: 400px;
             margin: 0 auto;
-            background: white;
+            background-color: white;
             padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            text-align: center;
         }
         input[type="text"], button {
-            width: 100%;
             padding: 10px;
-            margin: 5px 0;
+            margin: 10px 0;
+            width: 100%;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 4px;
         }
         button {
             background-color: #007BFF;
             color: white;
-            border: none;
             cursor: pointer;
+            border: none;
         }
         button:hover {
             background-color: #0056b3;
@@ -38,24 +39,15 @@
 </head>
 <body>
     <div class="container">
-        <h2>Welcome to College Comparison</h2>
-        <label for="nameInput">Enter your name:</label>
-        <input type="text" id="nameInput" placeholder="Your Name">
+        <h1>Welcome</h1>
+        <input type="text" id="userName" placeholder="Enter your name" />
         <button onclick="submitName()">Submit</button>
     </div>
-
     <script>
-        function setCookie(name, value, days) {
-            const date = new Date();
-            date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
-            const expires = `expires=${date.toUTCString()}`;
-            document.cookie = `${name}=${value};${expires};path=/`;
-        }
-
         function submitName() {
-            const nameInput = document.getElementById('nameInput').value;
-            if (nameInput) {
-                setCookie('username', nameInput, 1);
+            const name = document.getElementById('userName').value;
+            if (name) {
+                localStorage.setItem('userName', name);
                 window.location.href = 'college_list.html';
             } else {
                 alert('Please enter your name.');
